Fix horizontal scroll (pull request #696)
Approved-by: James Shih <james.shih@fairfaxmedia.co.nz>
Approved-by: Viet Tran <viet.tran@fairfaxmedia.co.nz>
Approved-by: Karen Xie <karen.xie@fairfaxmedia.co.nz>

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -65,22 +65,22 @@ body {
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .container {
-    width: 768px;
-    max-width: 768px;
+    width: 748px;
+    max-width: 748px;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1119px) {
   .container {
-    width: 992px;
-    max-width: 992px;
+    width: 972px;
+    max-width: 972px;
   }
 }
 
 @media only screen and (min-width: 1120px) {
   .container {
-    width: 1120px;
-    max-width: 1120px;
+    width: 1100px;
+    max-width: 1100px;
   }
 }
 
